--- a/notes-pr/client/package.json
+++ b/notes-pr/client/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@chakra-ui/react": "^3.2.3",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "framer-motion": "^11.15.0",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "next-themes": "^0.4.4",
