--- a/notes-pr/client/package.json
+++ b/notes-pr/client/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.10.7",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
