--- a/notes-pr/client/package.json
+++ b/notes-pr/client/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
+    "react-table": "^7.8.0",
     "react-toastify": "^11.0.1"
   },
   "devDependencies": {
