--- a/notes-pr/client/package.json
+++ b/notes-pr/client/package.json
@@ -15,8 +15,10 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.15.0",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
+    "motion": "^11.15.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
