add in notes pr advance auth

--- a/notes-pr/server/config/.env
+++ b/notes-pr/server/config/.env
@@ -3,3 +3,4 @@ MONGO_URI=mongodb://localhost:27017/classDb
 JWT_SECRET=rphyperjsx
 COOKIE_EXPIRE=1
 CLIENT_URL=http://localhost:5173
+EMAIL_APP_PASS=ghkjtrafsbaaldnt
