--- a/MAKE ADMIN PANEL ON REQUIREMNT/make_admine/package.json
+++ b/MAKE ADMIN PANEL ON REQUIREMNT/make_admine/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "scripts": {
     "test": "jest __tests__/app.test.js",
     "start": "node index.js",
@@ -16,7 +15,8 @@
     "jest": "^29.3.1"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "body-parser": "^1.20.3",
+    "express": "^4.21.2",
+    "nodemon": "^3.1.9"
   }
 }
